--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,78 +1,120 @@
+.dashboard {
+    min-height: calc(100vh - 40px);
+    height: auto;
+    margin-top: 40px;
+    margin-left: 250px;
+    font-size: 12px;
+    overflow: auto;
+}
+.dashboard-adm {
+    height: 91vh;
+    font-size: 12px;
+}
+.sidebar {
+    height: 100vh;
+    width: 250px;
+    background-color: rgb(37, 37, 37);
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding-top: 90px;
+}
+.sidebar img {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+}
 .custom-navbar-bg {
-  background-color: #0b173b;
+    background-color: #0b173b;
 }
 .custom-link-text-logo {
-  color: #bdbdbd;
-  font-family: var(--font-aardc);
+    color: #bdbdbd;
+    font-family: var(--font-aardc);
 }
 .nav-link {
-  color: #bdbdbd;
+    color: #bdbdbd;
 }
 .nav-link:hover {
-  color: #ffffff;
+    color: #ffffff;
 }
 .custom-text {
-  color: #bdbdbd;
+    color: #bdbdbd;
 }
 .custom-carousel-caption {
-  position: absolute;
-  z-index: 3;
+    position: absolute;
+    z-index: 3;
 }
 .overlay {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  top: 40%;
-  background: linear-gradient(transparent, rgba(0, 0, 0, 0.705));
-  z-index: 1;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top: 40%;
+    background: linear-gradient(transparent, rgba(0, 0, 0, 0.705));
+    z-index: 1;
 }
 .custom-button-hamburguer-index {
-  position: absolute;
-  left: 88%;
-  top: 20px;
+    position: absolute;
+    left: 88%;
+    top: 20px;
 }
 .custom-button-hamburguer-user {
-  position: absolute;
-  left: 88%;
-  top: 9px;
+    position: absolute;
+    left: 88%;
+    top: 9px;
 }
 .custom-button-hamburguer-size-color span {
-  color: #bdbdbd;
-  font-size: 30px;
+    color: #bdbdbd;
+    font-size: 30px;
 }
 .custom-icon-red {
-  color: rgb(219, 51, 51);
-  font-size: 20px;
+    color: rgb(219, 51, 51);
+    font-size: 20px;
 }
 .custom-icon-red:hover {
-  color: rgb(255, 120, 120);
-  cursor: pointer;
+    color: rgb(255, 120, 120);
+    cursor: pointer;
 }
 .custom-icon-green {
-  color: rgb(63, 145, 63);
-  font-size: 20px;
+    color: rgb(63, 145, 63);
+    font-size: 20px;
 }
 .custom-icon-green:hover {
-  color: rgb(162, 241, 162);
-  cursor: pointer;
+    color: rgb(162, 241, 162);
+    cursor: pointer;
 }
 .custom-card {
-  width: 240px;
+    width: 240px;
 }
 .books-cards {
-  background: linear-gradient(45deg, #0b173b, #574fcc);
-  box-sizing: border-box;
-  border-radius: 5px 5px 0 0;
+    background: linear-gradient(45deg, #0b173b, #574fcc);
+    box-sizing: border-box;
+    border-radius: 5px 5px 0 0;
 }
 .books-cards img {
-  width: 50%;
+    width: 50%;
 }
 .videos-cards img {
-  width: 100%;
+    width: 100%;
 }
 .card img {
-  height: 180px;
-  object-fit: cover;
-  max-width: 100%;
+    height: 180px;
+    object-fit: cover;
+    max-width: 100%;
+}
+.input-date::-webkit-calendar-picker-indicator {
+    background-color: #595c5f;
+    padding: 5px;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+@media (max-width: 768px) {
+    .sidebar {
+        display: none;
+    }
+    .dashboard {
+        margin-left: 0;
+    }
 }
