--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -109,6 +109,9 @@
     border-radius: 3px;
     cursor: pointer;
 }
+.card-width-custom {
+    width: 400px;
+}
 
 @media (max-width: 768px) {
     .sidebar {
