--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -7,9 +7,56 @@
     overflow: auto;
 }
 .dashboard-adm {
-    height: 91vh;
+    height: 100%;
+    padding: 55px 0 100px 0;
     font-size: 12px;
 }
+.loading {
+    width: 100vw;
+    height: 100vh;
+    opacity: 0.5;
+}
+.loader {
+    width: 100px;
+    height: 100px;
+    display: inline-block;
+    position: relative;
+}
+.loader::after,
+.loader::before {
+    content: '';
+    box-sizing: border-box;
+    width: 100px;
+    height: 100px;
+    border: 2px solid #fff;
+    position: absolute;
+    left: 0;
+    top: 0;
+    animation: rotationBreak 3s ease-in-out infinite alternate;
+}
+.loader::after {
+    border-color: #0400e9;
+    animation-direction: alternate-reverse;
+}
+
+@keyframes rotationBreak {
+    0% {
+        transform: rotate(0);
+    }
+    25% {
+        transform: rotate(90deg);
+    }
+    50% {
+        transform: rotate(180deg);
+    }
+    75% {
+        transform: rotate(270deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 .sidebar {
     height: 100vh;
     width: 250px;
