--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -134,6 +134,17 @@
 .custom-card {
     width: 240px;
 }
+.img-table{
+    width: 40px;
+    height: 40px;
+}
+.tight-cell {
+    padding: 0;
+    margin: 0;
+    width: auto;
+    height: auto;
+    white-space: nowrap;
+  }
 .books-cards {
     background: linear-gradient(45deg, #0b173b, #574fcc);
     box-sizing: border-box;
