--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -11,10 +11,16 @@
     padding: 55px 0 100px 0;
     font-size: 12px;
 }
-.loading {
+.loading-adm {
     width: 100vw;
     height: 100vh;
     opacity: 0.5;
+}
+.loading-users {
+    width: calc(100vw - 250px);
+    height: 100vh;
+    opacity: 0.5;
+    float: right;
 }
 .loader {
     width: 100px;
