created password recovery

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -176,6 +176,9 @@
 .card-width-custom {
     width: 400px;
 }
+.text-grup {
+    line-height: 1.5;
+}
 
 @media (max-width: 768px) {
     .sidebar {
